# jean-claude

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  _typos.toml  hatch_build.py  plan.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.config/: wt.toml
.github/workflows/: build.yml  ci.yaml
jean_claude/: applescript.py  auth.py  cli.py  config.py  errors.py  gcal.py  gdocs.py  gdrive.py  gmail.py  gsheets.py  imessage.py  input.py  logging.py  messaging.py  pagination.py  paths.py  phone.py  reminders.py  signal.py  timezone.py  whatsapp.py
scripts/: generate-command-reference.py
signal/: Cargo.toml
signal/src/: main.rs
skills/check-emails/: SKILL.md
skills/jean-claude/: ISSUES.md  ONBOARDING.md  PREFERENCES.md  SKILL.md  composition-principles.md
skills/jean-claude/commands/: auth.txt  completions.txt  config-set.txt  config-show.txt  config.txt  gcal-calendars.txt  gcal-conflicts.txt  gcal-create.txt  gcal-delete.txt  gcal-freebusy.txt  gcal-invitations.txt  gcal-list.txt  gcal-respond.txt  gcal-search.txt  gcal-update.txt  gcal.txt  gdocs-append.txt  gdocs-create.txt  gdocs-info.txt  gdocs-read.txt  gdocs-replace.txt  gdocs.txt  gdrive-download.txt  gdrive-get.txt  gdrive-list.txt  gdrive-mkdir.txt  gdrive-move.txt  gdrive-search.txt  gdrive-share.txt  gdrive-trash.txt  gdrive-untrash.txt  gdrive-upload.txt  gdrive.txt  gmail-archive.txt  gmail-attachment-download.txt  gmail-attachments.txt  gmail-draft.txt  gmail-filter.txt  gmail-get.txt  gmail-inbox.txt  (+67 more)
skills/jean-claude/scripts/: auth.py  gcal.py  gdrive.py  gmail.py  imessage.py
skills/reviewing-cc-logs/: SKILL.md
src/jean_claude/: auth.py  cli.py  gcal.py  gdrive.py  gmail.py  imessage.py
tests/: conftest.py  test_applescript.py  test_cli.py  test_gcal.py  test_gdocs.py  test_gdrive.py  test_gmail.py  test_gsheets.py  test_imessage.py  test_logging.py  test_reminders.py  test_whatsapp.py
tests/fixtures/: imessage_db.py  whatsapp_cli.py  whatsapp_db.py
tests/integration/: __init__.py  conftest.py  test_gmail_lifecycle.py  test_imessage_escaping.py
whatsapp/: .golangci.yml  build.sh  client.go  commands.go  go.mod  go.sum  main.go  message.go  util.go
