[project]
name = "j-claude"
# No version - this is a plugin, not a published package
version = "0.1.0"
description = "Google Workspace (Gmail, Calendar, Drive) and iMessage integration for Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Maximilian" }]
keywords = ["gmail", "google-calendar", "google-drive", "imessage", "claude-code"]

dependencies = [
    "click",
    "google-api-python-client",
    "google-auth-oauthlib",
    "platformdirs",
    "structlog",
]

[project.scripts]
jean-claude = "jean_claude.cli:cli"

[dependency-groups]
dev = ["pytest", "pre-commit", "ty"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jean_claude"]
artifacts = ["jean_claude/bin/*"]

[tool.hatch.build.targets.wheel.hooks.custom]
# Sets platform-specific wheel tag based on bundled Go binary

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: tests requiring Google API credentials (deselected by default)"]
addopts = "-m 'not integration'"

[tool.typos.default.extend-words]
# BA is a valid spreadsheet column (A-Z, AA-AZ, BA-BZ, etc.)
ba = "ba"
